--- a/estudos-angular-app/src/app/app.component.html
+++ b/estudos-angular-app/src/app/app.component.html
@@ -482,3 +482,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <menu-component></menu-component>
+<my-button></my-button>
+<my-button></my-button>
