--- a/estudos-angular-app/src/app/components/button.component.html
+++ b/estudos-angular-app/src/app/components/button.component.html
@@ -1,3 +1,6 @@
 <div>
-  <button>Click aqui</button>
+  <button>{{ buttonText }}</button>
+  <button>{{ buttonNumber }}</button>
+  <button>{{ buttonTexts[1] }}</button>
+  <button>{{ buttonObject.label }}</button>
 </div>
