feat: novos componentes

--- a/estudos-angular-app/src/app/components/button.component.html
+++ b/estudos-angular-app/src/app/components/button.component.html
@@ -3,4 +3,7 @@
   <button>{{ buttonNumber }}</button>
   <button>{{ buttonTexts[1] }}</button>
   <button>{{ buttonObject.label }}</button>
+  <button>{{ buttonText }}</button>
+  <button>{{ buttonText }}</button>
+  <button>{{ buttonObject.cancel }}</button>
 </div>
