--- a/estudos-angular-app/src/app/app.component.html
+++ b/estudos-angular-app/src/app/app.component.html
@@ -483,5 +483,5 @@
 
 <menu-component></menu-component>
 <my-button></my-button>
-<my-button></my-button>
-<card></card>
+<!-- <my-button></my-button> -->
+<!-- <my-button (click)="getAlert()"></my-button> -->
