--- a/estudos-angular-app/src/app/components/button.component.html
+++ b/estudos-angular-app/src/app/components/button.component.html
@@ -5,5 +5,6 @@
   <button>{{ buttonObject.label }}</button>
   <button>{{ buttonText }}</button>
   <button>{{ buttonText }}</button>
-  <button>{{ buttonObject.cancel }}</button>
+  <button (click)="getAlert()">{{ buttonObject.cancel }}</button>
+  <button (mouseover)="mousePassandoPorCima()">{{ buttonObject.cancel }}</button>
 </div>
