feat: entendendo two-way data bidding

--- a/estudos-angular-app/src/app/app.component.html
+++ b/estudos-angular-app/src/app/app.component.html
@@ -482,6 +482,5 @@
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 <menu-component></menu-component>
-<my-button></my-button>
 <!-- <my-button></my-button> -->
-<!-- <my-button (click)="getAlert()"></my-button> -->
+<app-entry-data></app-entry-data>
