--- a/estudos-angular-app/src/app/components/entry-data.component.html
+++ b/estudos-angular-app/src/app/components/entry-data.component.html
@@ -1,2 +1,7 @@
-<input type="text" [value]="placeholder" (input)="placeholder = $any($event.target).value"/>
+<input
+  type="text"
+  [value]="placeholder"
+  (input)="placeholder = $any($event.target).value"
+/>
 <p>O texto vai ser colocado dinamicamente aqui: {{ placeholder }}</p>
+
